package decorator

abstract class Border(protected val display: Display): Display()